--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ aws-config = { version = "1.5.17", features = ["behavior-version-latest"] }
 aws-sdk-ec2 = "1.113.0"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.140"
