--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ aws-sdk-ec2 = "1.113.0"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.140"
+dirs = "5.0"
