--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ description = "A simple CLI to start and stop EC2 instances"
 homepage = "https://github.com/bobby060/lightswitch"
 repository = "https://github.com/bobby060/lightswitch"
 keywords = ["aws", "cli", "ec2"]
-categories = ["aws", "command-line-utilities"]
+categories = ["command-line-utilities"]
 
 [dependencies]
 aws-config = { version = "1.5.17", features = ["behavior-version-latest"] }
